# clocklock

./: .gitchangelog.rc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package-test.yml
examples/: README.md  example_timeout_decorator.py  example_usage.py
src/clocklock/: __init__.py  decorator.py  timeoutter.py
tests/: test_decorator.py  test_timeoutter.py
